--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/Wifi_Projektdokumentation.doc
+/Projekt und Prüfung 20180223.pdf
+/FragenkatalogSWDPrüfung.pdf
