--- a/MediaBackupManager/MediaBackupManager.csproj
+++ b/MediaBackupManager/MediaBackupManager.csproj
@@ -100,7 +100,9 @@
     <Compile Include="Model\FileIndex.cs" />
     <Compile Include="Model\FileNode.cs" />
     <Compile Include="Model\LogicalVolume.cs" />
+    <Compile Include="ViewModel\BackupSetViewModel.cs" />
     <Compile Include="ViewModel\FileIndexViewModel.cs" />
+    <Compile Include="ViewModel\TestPageViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
