--- a/MediaBackupManager/MediaBackupManager.csproj
+++ b/MediaBackupManager/MediaBackupManager.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Model\LogicalVolume.cs" />
     <Compile Include="ViewModel\BackupSetViewModel.cs" />
     <Compile Include="ViewModel\FileIndexViewModel.cs" />
+    <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="ViewModel\TestPageViewModel.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
