added validation rules

--- a/MediaBackupManager/MediaBackupManager.csproj
+++ b/MediaBackupManager/MediaBackupManager.csproj
@@ -139,6 +139,7 @@
     <Compile Include="View\Popups\PopupBase.xaml.cs">
       <DependentUpon>PopupBase.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\ValidationRules.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
