added item to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,5 @@ __pycache__/
 /Wifi_Projektdokumentation.doc
 /Projekt und Prüfung 20180223.pdf
 /FragenkatalogSWDPrüfung.pdf
+
+wifi documentation/
