--- a/MediaBackupManager/MediaBackupManager.csproj
+++ b/MediaBackupManager/MediaBackupManager.csproj
@@ -164,6 +164,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Resource Include="Font\Roboto-Bold.ttf" />
+    <Resource Include="Font\Roboto-BoldItalic.ttf" />
+    <Resource Include="Font\Roboto-Italic.ttf" />
+    <Resource Include="Font\Roboto-LightItalic.ttf" />
+    <Resource Include="Font\Roboto-Medium.ttf" />
+    <Resource Include="Font\Roboto-MediumItalic.ttf" />
+    <Resource Include="Font\Roboto-Regular.ttf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
