--- a/MediaBackupManager/MediaBackupManager.csproj
+++ b/MediaBackupManager/MediaBackupManager.csproj
@@ -178,6 +178,7 @@
     <Resource Include="Font\Roboto-Medium.ttf" />
     <Resource Include="Font\Roboto-MediumItalic.ttf" />
     <Resource Include="Font\Roboto-Regular.ttf" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
